--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@
 						<li><a href="https://twitter.com/IeeeDtu" target="blank"><span class="fa fa-twitter"></span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCtTTFxQ44yG_ah3OWyl8E4g" target="blank"><span class="fa fa-youtube"></span></a></li>
 					</ul>
-					<div class="copyright">COPYRIGHT &copy; 2017 IEEE DTU. ALL RIGHTS RESERVED</div>
+					<!-- Copyright to be put here if and when needed-->
 				</div>
 
 			</div>
