--- a/index.html
+++ b/index.html
@@ -699,15 +699,15 @@
 							<img src="images/main-slider/2.jpg" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="-70" data-speed="1500" data-start="0" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<div class="sub-title alternate">Techweek'17</div>
+								<div class="sub-title alternate">Techweek'19</div>
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="30" data-speed="1500" data-start="500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<h2>August of 2017<br> will introduce you to this new world</h2>
+								<h2>August of 2019<br> will introduce you to this new world</h2>
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="120" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<div class="text">21 August - 3 September, 2017, DTU</div>
+								<div class="text">X August - X September, 2019, DTU</div>
 							</div>
 						</li>
 
