Updated contact details
Changed the contact details and added new contacts.

--- a/index.html
+++ b/index.html
@@ -1226,8 +1226,8 @@
 							<div class="footer-info">
 								<div class="inner">
 									<div class="icon flaticon-smartphone-1"></div>
-									<div class="text"> Chandan: 9971485653
-										<br> Aryan : 9716269154</div>
+									<div class="text"> Drishti: 7042143288
+										<br> Utkarsh : 9868572706</div>
 								</div>
 							</div>
 						</div>
