--- a/index.html
+++ b/index.html
@@ -1136,55 +1136,55 @@
 									<div class="item active">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-1.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Deeksha Mittal</h4>
-											<h5 class="text-center">9013169179</h5>
+											<h4 class="text-center">Saurabh Patel</h4>
+											<h5 class="text-center">8239442745</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-2.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Aarushi Aggarwal</h4>
-											<h5 class="text-center">9899580806</h5>
+											<h4 class="text-center">Anuj Soni</h4>
+											<h5 class="text-center">9461704949</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-3.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Kanchan Yadav</h4>
-											<h5 class="text-center">8130460275</h5>
+											<h4 class="text-center">Manmohan Mathur</h4>
+											<h5 class="text-center">9990770130</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-4.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Aarushi Mann</h4>
-											<h5 class="text-center">9891090243</h5>
+											<h4 class="text-center">Shefali Singh</h4>
+											<h5 class="text-center">9811717636</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-5.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Utkarsh Verma</h4>
-											<h5 class="text-center">9452674383</h5>
+											<h4 class="text-center">Lavanisha Prasad</h4>
+											<h5 class="text-center">9910847595</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-6.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Rattan Kaur</h4>
-											<h5 class="text-center">9599419967</h5>
+											<h4 class="text-center">Akshita Chander</h4>
+											<h5 class="text-center">8368696317</h5>
 										</div>
 									</div>
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
 											<img src="images/resource/author-7.jpg" class="img-responsive center-block">
-											<h4 class="text-center">Shubhi Sareen</h4>
+											<h4 class="text-center">Akshita</h4>
 											<h5 class="text-center">7838012219</h5>
 										</div>
 									</div>
