--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
 
 									<div class="item active">
 										<div class="col-xs-12 col-sm-6 col-md-2">
-											<img src="images/resource/author1.jpg" class="img-responsive center-block">
+											<img src="images/resource/author1.jpeg" class="img-responsive center-block">
 											<h4 class="text-center">Saurabh Patel</h4>
 											<h5 class="text-center">8239442745</h5>
 										</div>
@@ -1143,7 +1143,7 @@
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
-											<img src="images/resource/author2.jpg" class="img-responsive center-block">
+											<img src="images/resource/author2.jpeg" class="img-responsive center-block">
 											<h4 class="text-center">Anuj Soni</h4>
 											<h5 class="text-center">9461704949</h5>
 										</div>
@@ -1159,7 +1159,7 @@
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
-											<img src="images/resource/author4.jpg" class="img-responsive center-block">
+											<img src="images/resource/author4.jpeg" class="img-responsive center-block">
 											<h4 class="text-center">Shefali Singh</h4>
 											<h5 class="text-center">9811717636</h5>
 										</div>
@@ -1167,7 +1167,7 @@
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
-											<img src="images/resource/author5.jpg" class="img-responsive center-block">
+											<img src="images/resource/author5.jpeg" class="img-responsive center-block">
 											<h4 class="text-center">Lavanisha Prasad</h4>
 											<h5 class="text-center">9910847595</h5>
 										</div>
@@ -1175,7 +1175,7 @@
 
 									<div class="item">
 										<div class="col-xs-12 col-sm-6 col-md-2">
-											<img src="images/resource/author6.jpg" class="img-responsive center-block">
+											<img src="images/resource/author6.jpeg" class="img-responsive center-block">
 											<h4 class="text-center">Akshita Chander</h4>
 											<h5 class="text-center">8368696317</h5>
 										</div>
