--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 										<li><a href="#gallery">Gallery</a></li>
 										<li><a href="#sponsors">Sponsors</a></li>
 										<li><a href="#memcords">Membership Coordinators</a></li>
-										<li><a href="https://goo.gl/forms/teiJTSrLhiKZ7xOo1">Register</a></li>
+										<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfMpkRLWcqYf9lt4Q3L6HJDx0keO4NLJDnNtshzg-oYpt4FCw/viewform?usp=sf_link">Register</a></li>
 									</ul>
 								</div>
 							</nav>
@@ -650,7 +650,7 @@
 									<li><a href="#gallery">Gallery</a></li>
 									<li><a href="#sponsors">Sponsors</a></li>
 									<li><a href="#memcords">Membership Coordinators</a></li>
-									<li><a href="https://goo.gl/forms/teiJTSrLhiKZ7xOo1">Register</a></li>
+									<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfMpkRLWcqYf9lt4Q3L6HJDx0keO4NLJDnNtshzg-oYpt4FCw/viewform?usp=sf_link">Register</a></li>
 								</ul>
 
 
@@ -679,12 +679,12 @@
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="-160" data-speed="1500" data-start="0" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
 								<div class="sub-title">
-									<h2>IEEE DTU and Coding Blocks</h2>
+									<h2>IEEE DTU</h2>
 								</div>
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="-90" data-speed="1500" data-start="500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<h2>Present</h2>
+								<h2>Presents</h2>
 							</div>
 
 
@@ -694,7 +694,7 @@
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="center" data-hoffset="15" data-y="center" data-voffset="70" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
 								<div class="time-counter">
-									<div class="time-countdown clearfix" data-countdown="2019/08/28"></div>
+									<div class="time-countdown clearfix" data-countdown="2019/09/03"></div>
 								</div>
 							</div>
 						</li>
@@ -707,11 +707,11 @@
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="30" data-speed="1500" data-start="500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<h2>August of 2019<br> will introduce you to this new world</h2>
+								<h2>This September<br> will introduce you to this new world</h2>
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="120" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<div class="text">28th August - 6th September, 2019, DTU</div>
+								<div class="text">3rd September - 7th September, 2019, DTU</div>
 							</div>
 						</li>
 
@@ -729,7 +729,7 @@
 					<h2 id="about">About </h2>
 					<h3>TECHWEEK</h3>
 					<div class="text">
-						<p>Techweek is an annual workshop organized by IEEE DTU which provides an insight to various upcoming technologies in Engineering. Techweek offers an intuition to students who want to contribute to pioneer technologies of today. The objective of Techweek is to satiate the curiosity of budding minds in various fields. This August, come join us to broaden your thinking avenues.</p>
+						<p>Techweek is an annual workshop organized by IEEE DTU which provides an insight to various upcoming technologies in Engineering. Techweek offers an intuition to students who want to contribute to pioneer technologies of today. The objective of Techweek is to satiate the curiosity of budding minds in various fields. This September, come join us to broaden your thinking avenues.</p>
 					</div>
 				</div>
 
@@ -1031,7 +1031,7 @@
 					<img src="images/gallery/2.jpg" />
 				</div>
 				<div>
-					<img src="images/gallery/3.jpg" />
+					<img src="D:\techweek\Techweek-19\images\IMG_20180904_184821.jpg" />
 				</div>
 				<div>
 					<img src="images/gallery/4.jpg" />
@@ -1046,7 +1046,7 @@
 					<img src="images/gallery/7.jpg" />
 				</div>
 				<div>
-					<img src="images/gallery/8.jpg" />
+					<img src="D:\techweek\Techweek-19\images\IMG_20180911_182331.jpg" />
 				</div>
 			</div>
 		</section>
@@ -1200,7 +1200,8 @@
 
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12">
-							<div class="carousel carousel-showmanymoveone slide" id="itemslider">
+							<div class="carousel carousel-showmanymoveone slide" >
+								<!--id="itemslider">-->
 								<div class="carousel-inner">
 
 									<div class="item active">
@@ -1254,10 +1255,10 @@
 
 								</div>
 
-								<div id="slider-control">
+								<!--<div id="slider-control">
 									<a class="left carousel-control" href="#itemslider" data-slide="prev"><img src="https://s12.postimg.org/uj3ffq90d/arrow_left.png" alt="Left" class="img-responsive"></a>
 									<a class="right carousel-control" href="#itemslider" data-slide="next"><img src="https://s12.postimg.org/djuh0gxst/arrow_right.png" alt="Right" class="img-responsive"></a>
-								</div>
+								</div>-->
 							</div>
 						</div>
 					</div>
