--- a/index.html
+++ b/index.html
@@ -773,10 +773,7 @@
 									<div class="btn-inner">
 										<div class="icon"><span class="flaticon-clock-1"></span></div>Wed</div>
 								</li>
-								<li class="day">
-									<div class="btn-inner">
-										<div class="icon"><span class="flaticon-clock-1"></span></div>Thurs</div>
-								</li>
+
 							</ul>
 						</div>
 
@@ -794,13 +791,25 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/machineLearning.jpg" alt="" href="#ML" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/program.jpg" alt="" href="#program" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 											<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Machine Learning</div>
-												<div class="designation">28 august 2019</div>
+												<div class="speaker-title">Basic Prog.(C++)</div>
+												<div class="designation">2nd September 2019</div>
+											</div>
+										</div>
+										<div class="speaker">
+
+											<div class="image img-circle">
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Solid.jpg" alt="" href="#SW" role="button" data-toggle="modal"></figure>
+											</div>
+											<div class="lower">
+
+												<!--	<div class="time">5:00 pm</div> -->
+												<div class="speaker-title">Solidworks</div>
+												<div class="designation">2nd September 2019</div>
 											</div>
 										</div>
 									</div>
@@ -816,15 +825,29 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/program.jpg" alt="" href="#program" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Robo.jpg" alt="" href="#robo" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Programming(C++)</div>
-												<div class="designation">29 august 2019</div>
+												<div class="speaker-title">Robotics</div>
+												<div class="designation">3rd September 2019</div>
 											</div>
 										</div>
+										<div class="speaker">
+
+											<div class="image img-circle">
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/GD.jpg" alt="" href="#GD" role="button" data-toggle="modal"></figure>
+											</div>
+											<div class="lower">
+
+												<!--	<div class="time">5:00 pm</div> -->
+												<div class="speaker-title">Graphic Designing</div>
+												<div class="designation">3rd September 2019</div>
+											</div>
+										</div>
+
+
 										<!--<div class="speaker">
 
 											<div class="image img-circle">
@@ -851,27 +874,16 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/web.jpg" alt="" href="#WD" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/machineLearning.jpg" alt="" href="#ML" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Web Development</div>
-												<div class="designation">30 august 2019</div>
+												<div class="speaker-title">Machine Learning</div>
+												<div class="designation">4th September 2019</div>
 											</div>
 										</div>
-										<div class="speaker">
 
-											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Solid.jpg" alt="" href="#SW" role="button" data-toggle="modal"></figure>
-											</div>
-											<div class="lower">
-
-												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Solidworks</div>
-												<div class="designation">30 august 2019</div>
-											</div>
-										</div>
 										<!--<div class="speaker">
 
 											<div class="image img-circle">
@@ -898,13 +910,25 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Android.jpg" alt="" href="#android" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/web.jpg" alt="" href="#WD" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 											<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Android</div>
-												<div class="designation">3 September 2019</div>
+												<div class="speaker-title">Web Development</div>
+												<div class="designation">5th September 2019</div>
+											</div>
+										</div>
+										<div class="speaker">
+
+											<div class="image img-circle">
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/animation.jpg" alt="" href="#animation" role="button" data-toggle="modal"></figure>
+											</div>
+											<div class="lower">
+
+												<!--	<div class="time">5:00 pm</div> -->
+												<div class="speaker-title">Animation</div>
+												<div class="designation">5th September 2019</div>
 											</div>
 										</div>
 
@@ -914,40 +938,6 @@
 							</div>
 
 
-							<div class="slide-item">
-
-								<div class="inner">
-
-									<div class="speakers clearfix">
-
-										<div class="speaker">
-
-											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/GD.jpg" alt="" href="#GD" role="button" data-toggle="modal"></figure>
-											</div>
-											<div class="lower">
-
-												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Graphic Desigining</div>
-												<div class="designation">4 September 2019</div>
-											</div>
-										</div>
-										<div class="speaker">
-
-											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/IOT.jpg" alt="" href="#IOT" role="button" data-toggle="modal"></figure>
-											</div>
-											<div class="lower">
-
-												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">IOT</div>
-												<div class="designation">4 September 2019</div>
-											</div>
-										</div>
-
-									</div>
-								</div>
-							</div>
 							<div class="slide-item">
 
 								<div class="inner">
@@ -962,20 +952,20 @@
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Robotics</div>
-												<div class="designation">5 September 2019</div>
+												<div class="speaker-title">Circuit Designing</div>
+												<div class="designation">6th September 2019</div>
 											</div>
 										</div>
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/animation.jpg" alt="" href="#animation" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Android.jpg" alt="" href="#android" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Animation</div>
-												<div class="designation">5 September 2019</div>
+												<div class="speaker-title">Android Develop.</div>
+												<div class="designation">6th September 2019</div>
 											</div>
 										</div>
 
@@ -995,12 +985,23 @@
 											</div>
 											<div class="lower">
 
-											<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Data Structures and Algorithm</div>
-												<div class="designation">6 September 2019</div>
+												<!--	<div class="time">5:00 pm</div> -->
+												<div class="speaker-title">DS and Algo.</div>
+												<div class="designation">7th September 2019</div>
 											</div>
 										</div>
+										<div class="speaker">
 
+											<div class="image img-circle">
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/IOT.jpg" alt="" href="#IOT" role="button" data-toggle="modal"></figure>
+											</div>
+											<div class="lower">
+
+												<!--	<div class="time">5:00 pm</div> -->
+												<div class="speaker-title">IOT</div>
+												<div class="designation">7th September 2019</div>
+											</div>
+										</div>
 
 									</div>
 								</div>
@@ -1065,7 +1066,7 @@
 					<div class="row clearfix">
 						<div class="column center-block">
 							<div class="image">
-								<a href="https://codingblocks.com/" target="blank"><img src="images/sponsors/cb.png" alt="" /></a>
+								<a href="https://github.com/" target="blank"><img src="images/github3.png" alt="" /></a>
 							</div>
 						</div>
 						<!--<div class="column col-md-4 col-sm-4 col-xs-12">
@@ -1302,6 +1303,7 @@
 								<div class="inner">
 									<div class="icon flaticon-envelope"></div>
 									<div class="text">
+										<p></p>
 										<a href="mailto:contact@ieeedtu.com">contact@ieeedtu.com</a>
 									</div>
 								</div>
