--- a/index.html
+++ b/index.html
@@ -465,6 +465,29 @@
 			</div>
 		</div>
 		<div class="container">
+			<div id="Circuit" class="modal fade" role="dialog">
+				<div class="modal-dialog modal-lg">
+
+					<!-- Modal content-->
+					<div class="modal-content" style="text-align:center;">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<h4 class="modal-title" style="font-size: 40px;"><b>Circuit Designing Workshop</b></h4>
+						</div>
+						<div class="modal-body">
+							<p style="font-size: 15px;">Its the time to fire up your neurons and implement the given statement,embedded system design
+							that presents to you a simple yet challenging problem to be implemented using the much familiar electronics.</p>
+							<p style="font-size: 25px;"><b>Free and Open for All</b></p>
+						</div>
+						<!--	<div class="modal-footer">
+								<p style="font-size:30px;text-align:center;"><b>Venue: SPS-13, DTU</b></p>
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+							</div> -->
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
 			<div id="CX" class="modal fade" role="dialog">
 				<div class="modal-dialog modal-lg">
 
@@ -694,7 +717,7 @@
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="center" data-hoffset="15" data-y="center" data-voffset="70" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
 								<div class="time-counter">
-									<div class="time-countdown clearfix" data-countdown="2019/09/03"></div>
+									<div class="time-countdown clearfix" data-countdown="2019/09/02"></div>
 								</div>
 							</div>
 						</li>
@@ -711,7 +734,7 @@
 							</div>
 
 							<div class="tp-caption sft sfb tp-resizeme" data-x="left" data-hoffset="15" data-y="center" data-voffset="120" data-speed="1500" data-start="1000" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
-								<div class="text">3rd September - 7th September, 2019, DTU</div>
+								<div class="text">2nd September - 7th September, 2019, DTU</div>
 							</div>
 						</li>
 
@@ -751,6 +774,14 @@
 							<ul class="days-carousel owl-theme owl-carousel">
 								<li class="day">
 									<div class="btn-inner">
+										<div class="icon"><span class="flaticon-clock-1"></span></div>Mon</div>
+								</li>
+								<li class="day">
+									<div class="btn-inner">
+										<div class="icon"><span class="flaticon-clock-1"></span></div>Tues</div>
+								</li>
+								<li class="day">
+									<div class="btn-inner">
 										<div class="icon"><span class="flaticon-clock-1"></span></div>Wed</div>
 								</li>
 								<li class="day">
@@ -763,15 +794,7 @@
 								</li>
 								<li class="day">
 									<div class="btn-inner">
-										<div class="icon"><span class="flaticon-clock-1"></span></div>Mon</div>
-								</li>
-								<li class="day">
-									<div class="btn-inner">
-										<div class="icon"><span class="flaticon-clock-1"></span></div>Tue</div>
-								</li>
-								<li class="day">
-									<div class="btn-inner">
-										<div class="icon"><span class="flaticon-clock-1"></span></div>Wed</div>
+										<div class="icon"><span class="flaticon-clock-1"></span></div>Sat</div>
 								</li>
 
 							</ul>
@@ -837,12 +860,12 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/GD.jpg" alt="" href="#GD" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/GD.jpg" alt="" href="#animation" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Graphic Designing</div>
+												<div class="speaker-title">Animation</div>
 												<div class="designation">3rd September 2019</div>
 											</div>
 										</div>
@@ -922,12 +945,12 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/animation.jpg" alt="" href="#animation" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/animation.jpg" alt="" href="#GD" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
 												<!--	<div class="time">5:00 pm</div> -->
-												<div class="speaker-title">Animation</div>
+												<div class="speaker-title">Graphic Designing</div>
 												<div class="designation">5th September 2019</div>
 											</div>
 										</div>
@@ -947,7 +970,7 @@
 										<div class="speaker">
 
 											<div class="image img-circle">
-												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Robo.jpg" alt="" href="#robo" role="button" data-toggle="modal"></figure>
+												<figure class="speaker-image img-circle"><img class="img-circle" src="images/resource/Robo.jpg" alt="" href="#Circuit" role="button" data-toggle="modal"></figure>
 											</div>
 											<div class="lower">
 
@@ -1095,107 +1118,6 @@
 					<h3>Details</h3>
 				</div>
 
-				<!--Product Thumbs Carousel-->
-				<!--<div class="client-thumb-outer">
-                    <div class="client-thumbs-carousel owl-carousel owl-theme">
-
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-1.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-2.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-3.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-4.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-5.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-6.jpg" alt=""></figure>
-                        </div>
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-7.jpg" alt=""></figure>
-                        </div>-->
-
-				<!--
-                        <div class="thumb-item">
-                            <figure class="thumb-box"><img src="images/resource/author-3.jpg" alt=""></figure>
-                        </div>
--->
-				<!--</div>
-                </div>-->
-
-				<!--Client Testimonial Carousel-->
-				<!--<div class="client-testimonial-carousel owl-carousel owl-theme">-->
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Aarushi Mann</h3>
-                            <div class="designation">9891090243</div>
-                        </div>
-                    </div>-->
-
-
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Utkarsh Verma</h3>
-                            <div class="designation">9452674383</div>
-                        </div>
-                    </div>-->
-
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Rattan Kaur</h3>
-                            <div class="designation">9599419967</div>
-                        </div>
-                    </div>-->
-
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Shubhi Sareen</h3>
-                            <div class="designation">7838012219</div>
-                        </div>
-                    </div>-->
-
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Deeksha Mittal</h3>
-                            <div class="designation">9013169179</div>
-                        </div>
-                    </div>-->
-
-				<!--Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Aarushi Aggarwal</h3>
-                            <div class="designation">9899580806</div>
-                        </div>
-                    </div>-->
-
-
-
-				<!-- Testimonial Block One-->
-				<!--<div class="testimonial-block-one">
-                        <div class="inner-box">
-                            <h3>Kanchan Yadav</h3>
-                            <div class="designation">8130460275</div>
-                        </div>
-                    </div>-->
-
-
-				<!--</div>
-
-            </div>-->
-
-
 
 				<div class="container-fluid">
 
@@ -1316,7 +1238,7 @@
 				<div class="footer-lower">
 					<br>
 					<ul class="social-icon-two">
-						<li><a href="https://www.facebook.com/events/165283970707746/" target="blank"><span class="fa fa-facebook"></span></a></li>
+						<li><a href="https://www.facebook.com/events/430619270880654/?event_time_id=430619277547320?ti=icl" target="blank"><span class="fa fa-facebook"></span></a></li>
 						<li><a href="https://twitter.com/IeeeDtu" target="blank"><span class="fa fa-twitter"></span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCtTTFxQ44yG_ah3OWyl8E4g" target="blank"><span class="fa fa-youtube"></span></a></li>
 					</ul>
